patient details pages - mean-plot and density

--- a/src/app/modules/doctor/pages/patient-details/analysis/patient-analysis/analysis-finger-tapping/analysis-finger-tapping.component.html
+++ b/src/app/modules/doctor/pages/patient-details/analysis/patient-analysis/analysis-finger-tapping/analysis-finger-tapping.component.html
@@ -8,7 +8,7 @@
         Tabela z analizą danych
       </mat-panel-title>
     </mat-expansion-panel-header>
-    <app-data-tabel [data]="tableData"></app-data-tabel>
+    <app-data-tabel [data]="histogramData"></app-data-tabel>
   </mat-expansion-panel>
 
 <!--  histogram-->
@@ -49,7 +49,7 @@
         Funkcja gęstości prawdopodbieństwa
       </mat-panel-title>
     </mat-expansion-panel-header>
-    <app-density></app-density>
+    <app-density [data]="histogramData"></app-density>
   </mat-expansion-panel>
 
   <mat-expansion-panel (opened)="panelOpenState = true"
@@ -59,17 +59,7 @@
         Średnia arytmetyczne z danego badania
       </mat-panel-title>
     </mat-expansion-panel-header>
-    <p>This is the primary content of the panel.</p>
-  </mat-expansion-panel>
-
-  <mat-expansion-panel (opened)="panelOpenState = true"
-                       (closed)="panelOpenState = false">
-    <mat-expansion-panel-header>
-      <mat-panel-title>
-        CCDF
-      </mat-panel-title>
-    </mat-expansion-panel-header>
-    <p>This is the primary content of the panel.</p>
+    <app-mean-plot [data]="histogramData"></app-mean-plot>
   </mat-expansion-panel>
 
 </mat-accordion>
