--- a/src/app/modules/doctor/pages/patient-details/analysis/patient-analysis/analysis-finger-tapping/components/data-tabel/data-tabel.component.html
+++ b/src/app/modules/doctor/pages/patient-details/analysis/patient-analysis/analysis-finger-tapping/components/data-tabel/data-tabel.component.html
@@ -1,4 +1,4 @@
-<div *ngFor="let element of data">
+<div *ngFor="let element of dataSource">
   <p>{{element.period}} - przed zastosowaniem leczenia farmakologicznego</p>
   <mat-table class="table-details" [dataSource]="element.data.dataBeforeMed" class="mat-elevation-z8">
 
