--- a/src/app/modules/doctor/pages/browser-patient/browser-patient.component.scss
+++ b/src/app/modules/doctor/pages/browser-patient/browser-patient.component.scss
@@ -77,7 +77,6 @@ input {
 
 mat-table{
   box-shadow: none;
-  border-radius: 20px;
   @include default-shadow()
 }
 
@@ -118,4 +117,18 @@ mat-table{
   border-right: 1px solid #e0e0e0;
 }
 
+mat-header-cell {
+  font-weight: bold;
+  padding-top: 16px;
+  padding-bottom: 16px
+}
+
+mat-table {
+  padding: 16px;
+}
+
+mat-cell {
+  padding-top: 16px;
+  padding-bottom: 16px;
+}
 
