--- a/src/assets/styles/typography.scss
+++ b/src/assets/styles/typography.scss
@@ -12,6 +12,11 @@
   font-weight: 500;
 }
 
+@mixin roboto-regular() {
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+}
+
 @mixin roboto-bold() {
   font-family: "Roboto", sans-serif;
   font-weight: 700;
