--- a/src/app/modules/doctor/pages/patients/patients.component.html
+++ b/src/app/modules/doctor/pages/patients/patients.component.html
@@ -1,5 +1,6 @@
 <div class="card-position">
-  <div class="container-browser">
+  <mat-spinner class="spinner"  *ngIf="!(showSummaryData && showMeanSummaryData)"></mat-spinner>
+  <div class="container-browser" *ngIf="showSummaryData && showMeanSummaryData">
     <h2 class="tittle-browser">Zebrane dane pacjentów:</h2>
 
     <app-summary-patients [summaryPatient] = "summaryPatient"></app-summary-patients>
