--- a/src/app/modules/doctor/pages/patient-details/analysis/patient-analysis/analysis-finger-tapping/components/data-tabel/data-tabel.component.html
+++ b/src/app/modules/doctor/pages/patient-details/analysis/patient-analysis/analysis-finger-tapping/components/data-tabel/data-tabel.component.html
@@ -1,5 +1,5 @@
-<div *ngFor="let element of dataSource">
-  <p>{{element.period}} - przed zastosowaniem leczenia farmakologicznego</p>
+<div class="period-section" *ngFor="let element of dataSource">
+  <p class="title-period">{{element.period}} - przed zastosowaniem leczenia farmakologicznego</p>
   <mat-table class="table-details" [dataSource]="element.data.dataBeforeMed" class="mat-elevation-z8">
 
     <ng-container matColumnDef="parameter">
@@ -32,7 +32,7 @@
     <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
   </mat-table>
 
-  <p>{{element.period}} - po zastosowaniu leczenia farmakologicznego</p>
+  <p class="title-period">{{element.period}} - po zastosowaniu leczenia farmakologicznego</p>
   <mat-table class="table-details" [dataSource]="element.data.dataAfterMed" class="mat-elevation-z8">
 
     <ng-container matColumnDef="parameter">
