--- a/src/app/modules/doctor/pages/patient-details/analysis/patient-analysis/analysis-finger-tapping/components/density/density.component.html
+++ b/src/app/modules/doctor/pages/patient-details/analysis/patient-analysis/analysis-finger-tapping/components/density/density.component.html
@@ -1,5 +1,5 @@
 <div *ngFor="let graph of graphs">
-  <p>{{graph.period}}</p>
+  <p class="title-period">{{graph.period}}</p>
   <plotly-plot [data]="graph.dataTouchTime.data" [layout]="graph.dataTouchTime.layout"></plotly-plot>
   <plotly-plot [data]="graph.dataUpTime.data" [layout]="graph.dataUpTime.layout"></plotly-plot>
   <plotly-plot [data]="graph.dataIntertapInterval.data" [layout]="graph.dataIntertapInterval.layout"></plotly-plot>
