--- a/src/app/modules/doctor/pages/patient-details/analysis/patient-analysis/analysis-gyroscope/components/kde-tremor/kde-tremor.component.html
+++ b/src/app/modules/doctor/pages/patient-details/analysis/patient-analysis/analysis-gyroscope/components/kde-tremor/kde-tremor.component.html
@@ -1,5 +1,5 @@
 <div *ngFor="let graph of graphs">
-  <p>{{graph.period}}</p>
+  <p class="title-period">{{graph.period}}</p>
   <plotly-plot [data]="graph.meanByDayX.data" [layout]="graph.meanByDayX.layout"></plotly-plot>
   <plotly-plot [data]="graph.meanByDayY.data" [layout]="graph.meanByDayY.layout"></plotly-plot>
   <plotly-plot [data]="graph.meanByDayZ.data" [layout]="graph.meanByDayZ.layout"></plotly-plot>
