--- a/src/app/modules/doctor/pages/patients/patients.component.scss
+++ b/src/app/modules/doctor/pages/patients/patients.component.scss
@@ -66,3 +66,15 @@ app-density-difference-tremor-patient{
   margin-top: 25px;
   width: 100%;
 }
+
+.spinner {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
